<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/app_margin"
    tools:context=".destinationedit.AddDestinationActivity">


    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/add_button_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/latitude" />

    <EditText
        android:id="@+id/image_url"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="32dp"
        android:hint="@string/image_url_label"
        android:inputType="text|textUri"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dest_name"
        android:autofillHints="" />

    <EditText
        android:id="@+id/latitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/gps_coordinate_lat_label"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/longitude"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_url"
        android:autofillHints="" />


    <EditText
        android:id="@+id/longitude"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:hint="@string/gps_coordinate_long_label"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/latitude"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/latitude"
        android:autofillHints="" />

    <EditText
        android:id="@+id/dest_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/destination_name_hint"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_dest_title" />

    <TextView
        android:id="@+id/add_dest_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_dest_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>